--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,10 @@
         "paths": {
             "@pages/*" : ["src/pages/*"],
             "@hooks/*" : ["src/hooks/*"],
-            "@components/*" : ["src/components/*"]
+            "@components/*" : ["src/components/*"],
+            "@utils/*" : ["src/utils/*"],
+            "@styles/*" : ["src/styles/*"],
+            "@services/*" : ["src/services/*"]
         }
     }
 }
