--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@algolia/autocomplete-core": "^1.6.3",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "react": "^18.0.0",
