--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@algolia/autocomplete-core": "^1.6.3",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
