--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
             "@components/*" : ["src/components/*"],
             "@utils/*" : ["src/utils/*"],
             "@styles/*" : ["src/styles/*"],
-            "@services/*" : ["src/services/*"]
+            "@services/*" : ["src/services/*"],
+            "@assets/*" : ["src/assets/*"]
         }
     }
 }
